docs/assets/css/style.scss
/* ... */
@media screen and (min-width: $menu-breakpoint) {
  button.toggle-menu {
    display: none;
  }

  #main-menu-ul {
    display: block;
  }
}

@media screen and (max-width: $menu-breakpoint) {
  button.toggle-menu {
    display: block;
    float: right;
  }

  #main-menu-ul.hidden {
    display: none;
  }

  #main-menu-ul {
    display: block;
  }
}

/* ----------- TOC BUTTONS --------------- */

button.toggle-toc {
  background: inherit;
  float: right;
  font-size: 2em;
  font-family: $primary-font;
  color: $light;
  border-width: 1px;
  border-color: $light;
  min-width: 1em;
  margin-top: 10px; /* align with H2 */
}

@media screen and (min-width: $sidebar-breakpoint) {
  button.toggle-toc {
    display: none;
  }

  #toc-list {
    display: block;
  }
}

@media screen and (max-width: $sidebar-breakpoint) {
  button.toggle-toc {
    display: inline;
  }

  #toc-list.hidden {
    display: none;
  }

  #toc-list {
    display: block;
  }
}

/* ----------- TOC TABS ------------- */

#toc-tabs-container {
  background: $white;
}

.tab-content {
  display: none;
}

.tab-panel {
  display: none;
  padding: 10px;
}

.tab-radio {
  position: absolute;
  opacity: 0;
  pointer-events: none;
}

.textonly {
  display: none;
}

nav#toc-tabs {
  margin-top: 2.5em;

  .tab-strip {
    display: flex;
    gap: 2px;
    min-height: 2em;
    height: auto;

    a {
      color: inherit;
      text-decoration: none;

      a:hover {
        color: inherit;
      }
    }

    &.substrip {
      display: none;
    }

    label {
    }
  }

  .substrip {
    margin-bottom: 2em;
    margin-top: 0.7em;
    height: auto;

    .tab-label {
      font-size: 0.8em;
    }
  }

  .tab-label {
    display: flex; // Used to center text vertically
    align-items: center;
    min-height: 100%;
    gap: 8px;
    padding: 0 1em;
    font-size: 0.875em;
    font-weight: 500;
    cursor: pointer;
    position: relative;
    user-select: none;
    background: $light;
    color: black;
    border: 0.2em solid var(--blue);
    border-radius: 0.7em;
    text-align: center;

    &:focus-visible {
      outline: 0.2em solid $blue;
      outline-offset: 0.2em;
    }

    /* 
    border-color: $dark !important;
    border-top: solid;
    border-left: solid;
    border-right: solid;
    */
    /* 
    padding-left: 0.5em;
    padding-right: 0.5em;
    */
    /* margin-bottom: 0.5em; */
  }

  .tab-panels {
    background: whitesmoke;
    border: 2px solid var(--rule);
    border-top: none;
  }
}

/* ----------- COLLAPSABLE LISTS --------- */

/* Make this button look like a regular link */
button.toggle-button,
button.toggle-button-background {
  color: $blue;
  font-size: smaller;
  border-color: $blue;
  border-left: none;
  border-right: none;
  border-top-width: 1px;
  border-bottom-width: 1px;
  background: inherit;

  &:hover {
    color: $pink;
  }
}

.togglable {
  display: block;

  &.hidden {
    display: none;
  }
}

h2.inline,
h3.inline,
h4.inline {
  display: inline;
}

/* h4 and h3 do not look sufficiently different. */
h4.race-wrapper,
h4.inline {
  font-size: 1.2em;
}

/* Stop buttons from crashing into each other */
div.spacer {
  display: block;
  min-height: 2em;
}

/* Move continuation UL elements up so they look
 * like they merged with the previous lists.
 */
ul.continue {
  margin-top: -15px;
}

.media-list {
  margin-bottom: 1em;
}

.toggletop:hover {
  cursor: pointer;
  border-bottom: 3px solid;
}

.toggle-content {
  display: none;
  max-height: 0;
  transition: all 0.2s ease 0.15s;

  &.active {
    max-height: 100%;
    display: block;

    transition: all 0.35s ease 0.15s;
    margin-bottom: 3em;
  }
}

/* ------------ CANDIDATE LISTS ---------- */

.readable-widths p,
.readable-widths ul,
p.readable-widths {
  max-width: 45em; /* about 100 chars, which seems typical */
}

.space-top {
  margin-top: 1em;
}

/* ------------ CANDIDATE WORKSHEETS ------- */

table.candidate-worksheet {
  table-layout: fixed;
  width: 90%;

  s {
    text-decoration-thickness: 0.15em;
  }

  /* The "of .cell" is so that these rules do not apply 
     to the lower divs
   */

  /* heart */
  tr :nth-child(1 of .cell) {
    width: 1.5em;
    text-align: center;
  }

  .favourite-btn {
    display: block;
    margin: auto;
  }

  .notes-btn {
    display: block;
    margin: auto;
  }

  /* candidate name */
  tr :nth-child(2 of .cell) {
    width: 25%;

    td {
      /* Ensure there is enough space for the name.*/
      white-space: nowrap;
    }
  }

  /* my notes */
  tr :nth-child(3 of .cell) {
    .auto-resize-textarea {
      width: 100%;
    }

    td {
      padding: 0;
    }
  }

  th,
  td {
    vertical-align: middle;
  }
}

.notes-container {
  display: grid;
  grid-template-rows: 0fr;
  transition: grid-template-rows 200ms ease;

  &.open {
    grid-template-rows: 1fr;
  }

  > * {
    min-height: 0;
    overflow: hidden;
  }

  .auto-resize-textarea {
    min-height: 0;
  }
}

.auto-resize-textarea {
  font-size: inherit;
  font: inherit;
  min-height: 1.2em;
  cursor: text;

  &:focus {
    outline: 1px solid $gray;
    border-radius: 2px;
  }
}


/* ------------ HIDE/SHOW IF NO JS -------- */

/* https://www.amityweb.co.uk/blog/flash-of-jquery-hidden-content-before-js-is-called-to-hide-it
 */
.js-enabled .show-no-js { 
  display: none;
} 

/* Why would AOS turn this off? Undo it. */
.no-js [data-aos] { 
  pointer-events: auto;
}

/* ------------ FOOTER STYLING ----------- */

div.footer {
  font-size: smaller;

  .sharing { 
    /* undo target icon */
    a[target="_blank"]::after { 
      content: '';
      margin-left: 0;
    } 
  }

}

p.sharing a {
  margin-left: 0.5em;
  margin-right: 0.5em;
}
/* ... */

